syntax = "proto3";

package threat_detection.message.sample_request.v1;

option java_outer_classname = "SampleRequestProto";
option java_package = "threat_detection.message.sample_request.v1";

message Metadata {
  string country_code = 1;
  repeated SchemaConformanceError schema_errors = 2;
}

message SchemaConformanceError {
  string schema_path = 1;
  string instance_path = 2;
  string attribute = 3;
  string message = 4;
}

message SampleMaliciousRequest {
  string ip = 1;
  int64 timestamp = 2;
  string url = 3;
  string method = 4;
  int32 api_collection_id = 5;
  string payload = 6;
  string filter_id = 7;
  Metadata metadata = 8; 
  bool successful_exploit = 9;
}

message SampleRequestKafkaEnvelope {
  string account_id = 1;
  string actor = 2;
  SampleMaliciousRequest malicious_request = 3;
}
